<resources>
    <string name="app_name">APITest</string>
    <string name="pessoas">Pessoas</string>
    <string name="filmes">Filmes</string>
    <string name="planetas">Planetas</string>
    <string name="espacionaves">Espacionaves</string>
    <string name="especies">Especies</string>
    <string name="veiculos">Veiculos</string>
    <string name="conectioError">Algo de errado não esta certo, será que vc esta conectado na internet?</string>
</resources>
